--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_auth: ^5.3.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_custom_clippers: ^2.1.0
   provider: ^6.1.2
+  firebase_core: ^3.6.0
 
 dev_dependencies:
   flutter_test:
